--- a/config/mae/customer-profile/apiDescriptor.yml
+++ b/config/mae/customer-profile/apiDescriptor.yml
@@ -20,8 +20,4 @@ spec:
   location:
     path: /api-docs
     baseURL:
-      ref:
-        apiVersion: serving.knative.dev/v1
-        kind: Service
-        name: customer-profile
-
+      url: https://customer-profile-mae.run.postcvs.tapsme.org
